--- a/.gitignore
+++ b/.gitignore
@@ -3,30 +3,51 @@
 # Node modules
 node_modules/
 
-# Environment variables
+# Environment variables (CRÍTICO - contiene credenciales)
 .env
+.env.local
+.env.*.local
 
 # Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
-# Puppeteer cache
+# Puppeteer cache y descargas
 .cache/
 .local-chromium/
+*.crdownload
 
 # OS
 .DS_Store
 Thumbs.db
+Desktop.ini
 
-# IDE
+# IDE y editores
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+*.sublime-project
+*.sublime-workspace
 
-# Build
+# Build y distribución
 dist/
 build/
+*.tgz
+
+# Testing
+coverage/
+.nyc_output/
+
+# Temporal
+tmp/
+temp/
+*.tmp
+
+# Carpetas de respaldo
+backup/
+*.bak
