feat: update README and .env.example with Twitch API credentials setup instructions

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,19 @@ PORT=3000
 # Canal de Twitch (sin el #)
 TWITCH_CHANNEL=tu_canal
 
+# ============================================
+# TWITCH API (para badges)
+# ============================================
+# Obtén estas credenciales en: https://dev.twitch.tv/console/apps
+# 1. Crea una nueva aplicación
+# 2. Nombre: Chat Overlay (o el que prefieras)
+# 3. URL de redirección: http://localhost:3000
+# 4. Categoría: Chat Bot
+# 5. Copia el Client ID y genera un Client Secret
+
+TWITCH_CLIENT_ID=tu_client_id_aqui
+TWITCH_CLIENT_SECRET=tu_client_secret_aqui
+
 # Canal de Kick
 KICK_CHANNEL=tu_canal
 
