feat(youtube): add YouTube API configuration and update README for live chat support

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,22 @@ KICK_ENABLED=true
 # true = Mock simulado (desarrollo, ligero)
 # false = Puppeteer real (producción, consume más recursos)
 KICK_USE_MOCK=false
+# ============================================
+# YOUTUBE API (para chat en vivo)
+# ============================================
+# Obtén la API Key en: https://console.cloud.google.com/
+# 1. Crea un proyecto o selecciona uno existente
+# 2. Habilita "YouTube Data API v3"
+# 3. Ve a Credenciales > Crear credencial > Clave de API
+# 4. Copia la API Key aquí
+
+# Habilitar/deshabilitar YouTube (true/false)
+YOUTUBE_ENABLED=true
+
+# API Key de Google Cloud
+YOUTUBE_API_KEY=tu_api_key_aqui
+
+# ID del video en vivo (el código después de watch?v= en la URL)
+# Ejemplo: Si la URL es https://www.youtube.com/watch?v=dQw4w9WgXcQ
+# El ID sería: dQw4w9WgXcQ
+YOUTUBE_VIDEO_ID=tu_video_id_aqui
