feat(youtube): add youtubei.js dependency for enhanced YouTube integration

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "puppeteer": "^24.34.0",
     "tmi.js": "^1.8.5",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "youtubei.js": "^16.0.1"
   }
 }
